# auctions-tutorial

./: .gitignore  README.md  help.txt  package-lock.json
.github/workflows/: tests-factory.yml  tests-py-01.yml  tests-py-02.yml  tests-py-03.yml  tests-rs-01.yml  tests-rs-02.yml  tests-rs-03.yml  tests-rs-04.yml  tests-ts-01.yml  tests-ts-02.yml  tests-ts-03.yml  tests-ts-04.yml
contract-py/01-basic-auction/: README.md  contract.py  contract.wasm
contract-py/02-winner-gets-nft/: README.md  contract.py  contract.wasm
contract-py/03-bid-with-fts/: README.md  contract.py  contract.wasm
contract-rs/: Cargo.toml
contract-rs/01-basic-auction/: Cargo.toml  README.md
contract-rs/02-owner-claims-money/: Cargo.toml
contract-rs/02-winner-gets-nft/: Cargo.toml  README.md
contract-rs/02-winner-gets-nft/src/: ext.rs  lib.rs
contract-rs/02-winner-gets-nft/tests/: test_basics.rs
contract-rs/03-bid-with-fts/: Cargo.toml  README.md
contract-rs/03-owner-claims-winner-gets-nft/: Cargo.toml
contract-rs/04-ft-owner-claims-winner-gets-nft/: Cargo.toml
contract-rs/src/: ext.rs  lib.rs
contract-rs/tests/: test_basics.rs
contract-ts/: README.md  package.json  tsconfig.json
contract-ts/01-basic-auction/: README.md  package.json
contract-ts/02-winner-gets-nft/: README.md
contract-ts/03-bid-with-fts/: README.md
contract-ts/04-ft-owner-claims-winner-gets-nft/: package.json
contract-ts/sandbox-test/: main.ava.js
factory/: Cargo.toml  README.md
factory/src/: deploy.rs  (+2 more)
frontend/: .env.local  package.json
sandbox-ts/: package-lock.json
src/: contract.ts
(+93 files in other folders)
